# LangGraph-Agents

./: AgenteIACAP.json  README.md  agente.txt  function_app.py  image64.txt  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
agentiacap/agents/: agentClassifier.py  agentCleaner.py  agentExtractor.py
agentiacap/configs/: Prompt_Template.py  llms.py
agentiacap/llms/: Prompts.py  llms.py  metadata_tracker.py
agentiacap/tools/: Ejemplos.json  convert_pdf.py  convert_to_base64.py  document_intelligence.py  evaluar_contexto.py  evaluate_context.py  validate_base64.py
agentiacap/utils/: globals.py
agentiacap/workflows/: main.py
src/agents/: agentClassifier.py  agentCleaner.py  agentExtractor.py
src/configs/: classes.py  llms.py
src/services/tools/: convert_pdf.py  document_intelligence.py
src/workflows/: main.py
tests/: base64  caso copy.json  caso.json  convert_to_base64.py  test-agentClassifier.py  test-agentCleaner.py  test-document-VISION.py  test-document-intelligence(deprecated) copy.py  test_Main.py  test_agentExtractor.py  test_agent_extractor.py
