[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Adrián Martínez",email = "adrianfmart@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.2.63,<0.3.0)",
    "langchain-openai (>=0.3.0,<0.4.0)",
    "langgraph-cli[inmen] (>=0.1.67,<0.2.0)",
    "langgraph-api (>=0.0.16,<0.0.17)",
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "transformers[torch] (>=4.48.1,<5.0.0)",
    "sentence-transformers (>=3.3.1,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "azure-ai-documentintelligence (>=1.0.0,<2.0.0)",
    "tenacity (>=8.3.0,<9.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "azure-identity (>=1.19.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "pymupdf (>=1.25.2,<2.0.0)",
    "azure-functions (>=1.21.3,<2.0.0)",
    "langchain-core (>=0.3.34,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
